Se añade estructura y estilos del header

--- a/index.html
+++ b/index.html
@@ -13,6 +13,40 @@
 
 
 <body>
+    
+    <header class="header">
+            <nav class="menu">
+                <ul class="menu-right-section">
+                    <li>
+                        <a href="">Gmail</a>
+                    </li>
+                    <li>
+                        <a href="">Imágenes</a>
+                    </li>
+                    <li class="menu-apps">
+                        <a href=""></a>
+                    </li>
+                    <li class="menu-profile-image">
+                        <a href="">
+                            <img src="https://lh3.googleusercontent.com/ogw/ADGmqu_YhJ4KhLU2AlpSjVQzVIs1WVt-W6FEcb73l65Z=s32-c-mo" alt="Imagen-Perfil">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+    </header>
+        
+
+    <main>
+
+
+
+
+    </main>
+
+
+    <footer>
+    </footer>
+
 
 </body>
 
