Se añade estructura y estilos del logo principal

--- a/index.html
+++ b/index.html
@@ -38,8 +38,18 @@
 
     <main>
 
-
-
+        <section class="logo-center">
+            <img src="https://img.pngio.com/google-logo-2015-png-image-purepng-free-transparent-cc0-png-google-logo-transparent-10000_3382.png"" alt="Logo de Google">
+        </section>
+        
+        <section class="input-area">
+            <input type="text">
+        </section>
+        
+        <section class="buttons-area">
+            <button></button>
+            <button></button>
+        </section>
 
     </main>
 
