Se corrigió medidas del header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                         <a href="">Imágenes</a>
                     </li>
                     <li class="menu-apps">
-                        <a href=""></a>
+                        <a href="">
+                            <img src="https://i.imgur.com/37rqegm.png" alt="Logo de Menú">
+                        </a>
                     </li>
                     <li class="menu-profile-image">
                         <a href="">
@@ -43,7 +45,9 @@
         </section>
         
         <section class="input-area">
+            <span></span>
             <input type="text">
+            <span></span>
         </section>
         
         <section class="buttons-area">
