Se añade estilos de search-icon

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
         
         <section class="input-area">
-            <span></span>
+            <span class="search-icon"></span>
             <input type="text">
             <span></span>
         </section>
