Se añade estilos del micro icon y se corrige relacion de espaciado con search-icon

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
         </section>
         
         <section class="input-area">
-            <span class="search-icon"></span>
+            <span class="search-icon">
+            </span>
             <input type="text">
-            <span></span>
+            <a class="micro-icon" href=""></a>
         </section>
         
         <section class="buttons-area">
