Se añade estructura y estilos de botones

--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
         </section>
         
         <section class="buttons-area">
-            <button></button>
-            <button></button>
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>Me siento con suerte</button>
+            </div>
         </section>
 
     </main>
